# corporateExpenseManager

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  Makefile  README.md  agents-cli-manifest.yaml  deploy-task.md  deployment_metadata.json  pyproject.toml  requirements.txt
artifacts/grade_results/: grade_report.json
artifacts/traces/: generated_traces.json
deployment/terraform/single-project/: variables.tf
deployment/terraform/single-project/vars/: env.tfvars
expense_agent/: agent.py  agent_runtime_app.py  config.py  fast_api_app.py
expense_agent/app_utils/: .requirements.txt  telemetry.py  typing.py
submission_frontend/: main.py  pyproject.toml
tests/eval/: eval_config.json  generate_traces.py  grade.py
tests/eval/datasets/: basic-dataset.json
tests/eval/metrics/: routing_correctness.py  security_containment.py
